--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
   "dependencies": {
     "@docusaurus/core": "3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
+    "@giscus/react": "^2.4.0",
     "@mdx-js/react": "^3.0.0",
-    "@montagejs/react-waline-client": "^0.1.10",
-    "@waline/client": "^3.0.0-alpha.10",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
