--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,8 +1,8 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+siyuan:
+  name: Siyuan
+  title: The founder
+  url: https://github.com/cyronlee
+  image_url: https://github.com/cyronlee.png
 
 yangshun:
   name: Yangshun Tay
